--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -56,86 +56,86 @@
         <h2 class="apresentacao__titulo">Sobre Nós</h2>
         <section class="apresentacao__conteudo__sobrenos">
                         
-                        <p>Bem vindo ao nosso curso Decola ENEM, o projeto foi criado por cinco alunos do curso de Introdução à Programação com foco em Front-End da instuiçao Proz, como tema escolhido pelo grupo foi Educaça de Qualidade.Assim foi desenvolvido um site com foco nos conteúdos da nova matriz curricular do Ensino Médio no Brasil, a BNCC – Base Nacional Curricular Comum, e que se torna a origem dos temas que caem nas provas do Enem.</p>
-                        <br>
-                        <p>Na plataforma você encontra videos, resumos, dicas e cronograma de estudos para mandar bem na próxima edição do Exame Nacional do Ensino Médio. Od conteudos estão organizados em Trilhas de Aprendizagem exclusivas para o Ensino Médio. Os alunos, professores e escolas podem adotar a seleção de aulas para suporte aos alunos do 1º, do 2º, e do 3º ano.E, tanto para os preparatórios do Enem quanto para o suporte ao Ensino Médio, disponibilizamos um acervo vídeo para melhor explicação dos conteúdos abordados.</p>
-                        <a><img class="imagem__destaque__sobre__nos" src="img/Home-estudantes.webp" alt="imagem__estutante"></a>    
+                        <p>Bem vindo ao nosso curso Decola ENEM, o projeto foi criado por cinco alunos do curso de Introdução à Programação com foco em Front-End da instuiçao Proz, como tema escolhido pelo grupo foi Educaça de Qualidade.Assim foi desenvolvido um site com foco nos conteúdos da nova matriz curricular do Ensino Médio no Brasil, a BNCC – Base Nacional Curricular Comum, e que se torna a origem dos temas que caem nas provas do Enem.<br>
+
+                        <br>Na plataforma você encontra videos, resumos, dicas e cronograma de estudos para mandar bem na próxima edição do Exame Nacional do Ensino Médio. Os conteudos estão organizados em Trilhas de Aprendizagem exclusivas para o Ensino Médio. Os alunos, professores e escolas podem adotar a seleção de aulas para suporte aos alunos do 1º, do 2º, e do 3º ano.E, tanto para os preparatórios do Enem quanto para o suporte ao Ensino Médio, disponibilizamos um acervo vídeo para melhor explicação dos conteúdos abordados.</p>
+                        <a><img class="imagem__destaque__sobre__nos" src="img/sobre_nos-estudantes.png" alt="imagem__estutante"></a>    
                 </section>
                     
-                    <h2 class="apresentacao__conteudo__titulo">Equipe Projeto Integrador - Talento Cloud</h2> <br>
-                    <div class="apresentacao__curso">
+                    <h3 class="apresentacao__titulo_equipe">Equipe Projeto Integrador - Talento Cloud</h3> 
+                    <ul class="apresentacao__curso_lista">
                         <li>Curso: Introdução à Programação com foco em Front-End</li>
                         <li>Instutição de ensino: Proz</li>
                         <li>Turma: 16</li>
                         <li>Grupo: D</li>
                         <li>Professor: Alexandre Silva</li>
-                    </div>
+                    </ul>
 
                             </section class="equipe" >
-                                    <h3 class="apresentacao__conteudo__titulo">Apresentação da Equipe</h3>
+                                    <h4 class="apresentacao__conteudo__titulo">Apresentação da Equipe</h4>
                                     <ul class="apresentacao__equipe">
                                             <li>
                                                 <img class="foto-integrante__equipe" src="img/carolina_lima.png" alt="foto-carolina">
-                                                <h4 class="equipe__lista">Carolina<br>Lima</h4>
-                                                <p>Desenvolvedora<br>Front-end</p>
+                                                <h5 class="equipe__lista_nome">Carolina Lima</h5>
+                                                <p class="equipe__lista_profissao">Desenvolvedora<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
                                                         <a class="apresentacao__links-rede-social__link" href="https://github.com/CarolinaLR">
-                                                            <img class="logo-rede-social" src="img/github.png">
+                                                            <img class="logo-rede-social" src="img/Logo Github.png">
                                                         </a>
                                                         <a class="apresentacao__links-rede-social__link" href="https://www.linkedin.com/in/carollr/">
-                                                            <img class="logo-rede-social" src="img/linkedin.png">
+                                                            <img class="logo-rede-social" src="img/Logo linkedin.png">
                                                         </a>
                                                     </div>
                                             </li> 
                                             <li>
                                                 <img class="foto-integrante__equipe" src="img/diego-magno.png" alt="foto-diego">
-                                                <h4 class="equipe__lista">Diego<br>Magno</h4>
-                                                <p>Desenvolvedor<br>Front-end</p>
+                                                <h5 class="equipe__lista_nome">Diego Magno</h5>
+                                                <p class="equipe__lista_profissao">Desenvolvedor<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
                                                         <a class="apresentacao__links-rede-social__link" href="https://github.com/dygomagno">
-                                                            <img class="logo-rede-social" src="img/github.png">
+                                                            <img class="logo-rede-social" src="img/Logo Github.png">
                                                         </a>
                                                         <a class="apresentacao__links-rede-social__link" href="https://www.linkedin.com/in/diego-magno-tecnologia/">
-                                                            <img class="logo-rede-social" src="img/linkedin.png">
+                                                            <img class="logo-rede-social" src="img/Logo linkedin.png">
                                                         </a>
                                                     </div>
                                             </li> 
                                             <li>
                                                 <img class="foto-integrante__equipe" src="img/karen_bastos.png" alt="foto-karen">
-                                                <h4 class="equipe__lista">Karen<br>Bastos</h4>
-                                                <p>Desenvolvedora<br>Front-end</p>
+                                                <h5 class="equipe__lista_nome">Karen Bastos</h5>
+                                                <p class="equipe__lista_profissao">Desenvolvedora<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
                                                         <a class="apresentacao__links-rede-social__link" href="https://github.com/karenkaroline-bastos">
-                                                            <img class="logo-rede-social" src="img/github.png">
+                                                            <img class="logo-rede-social" src="img/Logo Github.png">
                                                         </a>
                                                         <a class="apresentacao__links-rede-social__link" href="https://www.linkedin.com/in/karen-karoline-bastos-846b2083/">
-                                                            <img class="logo-rede-social" src="img/linkedin.png">
+                                                            <img class="logo-rede-social" src="img/Logo linkedin.png">
                                                         </a>
                                                     </div>
                                             </li> 
                                             <li>
                                                 <img class="foto-integrante__equipe" src="img/mauri_junio.png" alt="foto-mauri">
-                                                <h4 class="equipe__lista">Maurício<br>Junio</h4>
-                                                <p>Desenvolvedor<br>Front-end</p>
+                                                <h5 class="equipe__lista_nome">Maurício Junio</h5>
+                                                <p class="equipe__lista_profissao">Desenvolvedor<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
                                                         <a class="apresentacao__links-rede-social__link" href="https://github.com/maurijr97">
-                                                            <img class="logo-rede-social" src="img/github.png">
+                                                            <img class="logo-rede-social" src="img/Logo Github.png">
                                                         </a>
                                                         <a class="apresentacao__links-rede-social__link" href="https://www.linkedin.com/in/maur%C3%ADcio-j%C3%BAnior-4abaa9177/">
-                                                            <img class="logo-rede-social" src="img/linkedin.png">
-                                                        </a>
+                                                            <img class="logo-rede-social" src="img/Logo linkedin.png">
+                                                        </a>  
                                                     </div>
                                             </li> 
                                             <li>
                                                 <img class="foto-integrante__equipe" src="img/nata_sousa.png" alt="foto-nata">
-                                                <h4 class="equipe__lista">Natã<br>Sousa</h4>
-                                                <p>Desenvolvedor<br>Front-end</p>
+                                                <h5 class="equipe__lista_nome">Natã Sousa</h5>
+                                                <p class="equipe__lista_profissao">Desenvolvedor<br>Front-end</p>
                                                     <div class="apresentacao__rede-social">
                                                         <a class="apresentacao__links-rede-social__link" href="https://github.com/NatanSousa22">
-                                                            <img class="logo-rede-social" src="img/github.png">
+                                                            <img class="logo-rede-social" src="img/Logo Github.png">
                                                         </a>
                                                         <a class="apresentacao__links-rede-social__link" href="https://www.linkedin.com/in/natã-sousa-49298b2ab">
-                                                            <img class="logo-rede-social" src="img/linkedin.png">
+                                                            <img class="logo-rede-social" src="img/Logo linkedin.png">
                                                         </a>
                                                     </div>
                                             </li> 
