--- a/matematica.html
+++ b/matematica.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <style>
+     body
+     {
+       background-image: url(img/fundo-azul.jpg); 
+       background-size: cover;
+     }
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto - Decola ENEM</title>
+    <link rel="stylesheet" href="./styles/styles.css">
+    </style>
   </head>
   <body>
     <header class="cabecalho">
@@ -44,8 +52,8 @@
           <div>
           <img src="img/Quem-inventou-a-Matematica.png" width="300" height="300" alt="left" aling="right">
           </div>
-          <p>Em geral, nas provas de Matemática e Suas Tecnologias 
-            caem os seguintes temas:</p>
+          <h2>Em geral, nas provas de Matemática e Suas Tecnologias 
+            caem os seguintes temas:</h2>
             <p>-Sistema numérico (números naturais, inteiros, irracionais, frações);</p>
             <p>-Lógica, medidas (comprimento, volume, metro, litro, quilômetro, escala);</p>
             <p>-Regra de três;</p>
@@ -68,7 +76,7 @@
           </section>
     </main>
     <footer class="rodape__pagina">
-      <p>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</p>
+      <h4>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</h4>
     </footer>
   </body>
 </html>
