--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -2,33 +2,57 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styless.css">
     <link rel="stylesheet" href="teste.js">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto - Decola ENEM</title>
     <link rel="stylesheet" href="./styles/styles.css">
     <div>
-        <nav classe="login-cadastro">
-            <a class="link-login" href="login.html">Login </a>
+        <ul id="button_login_cadastro">
+          <li>
             <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
-        </nav>
-    </div>
-    <a class="cabecalho__menu__link" href="home.html"> <img class="logo-apresentacao" src="img/logo_docola_enem.png" href="home.html"> </a>
-</head>
+          </li>
+          <li>
+            <a class="link-login" href="login.html">Login </a>
+          </li>
+        </ul>
+      </div>
+    </head>
     <body>
-        <header class="cabecalho"> 
-                <nav cabecalho__menu>
-                        <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
-                        <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
-                        <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
-                        <a class="cabecalho__menu__link" href="ciencias_natureza.html"> Ciências da Natureza </a>
-                        <a class="cabecalho__menu__link" href="ciencias_humanas.html"> Ciências Humanas </a>
-                        <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
-                </nav> 
-        </header>
+      <header>
+        <ul id="button_menu">
+          <div>
+            <a class="cabecalho__menu__link" href="home.html">
+              <img
+                class="logo-apresentacao"
+                src="img/logo_docola_enem.png"
+                href="home.html"
+              />
+            </a>
+          </div>
+          <li>
+            <a href="sobre_nos.html">Sobre Nós </a>
+          </li>
+          <li>
+            <a href="redacao.html"> Redação </a>
+          </li>
+          <li>
+            <a href="linguagens.html"> Linguagens </a>
+          </li>
+          <li>
+            <a href="ciencias_natureza.html"> Ciências da Natureza </a>
+          </li>
+          <li>
+            <a href="ciencias_humanas.html"> Ciências Humanas </a>
+          </li>
+          <li>
+            <a href="matematica.html"> Matemática </a>
+          </li>
+        </ul>
+      </header>
 
-        <main> 
+<main> 
             <h2 class="apresentacao__conteudo__titulo">Sobre nós</h2>
                     <section class="apresentacao__conteudo__sobrenos">
                         <p>Bem vindo ao nosso curso Decola ENEM, o projeto foi criado por cinco alunos do curso de Introdução à Programação com foco em Front-End da instuiçao Proz, como tema escolhido pelo grupo foi Educaça de Qualidade.Assim foi desenvolvido um site com foco nos conteúdos da nova matriz curricular do Ensino Médio no Brasil, a BNCC – Base Nacional Curricular Comum, e que se torna a origem dos temas que caem nas provas do Enem.</p>
@@ -36,8 +60,7 @@
                         <p>Na plataforma você encontra videos, resumos, dicas e cronograma de estudos para mandar bem na próxima edição do Exame Nacional do Ensino Médio. Od conteudos estão organizados em Trilhas de Aprendizagem exclusivas para o Ensino Médio. Os alunos, professores e escolas podem adotar a seleção de aulas para suporte aos alunos do 1º, do 2º, e do 3º ano.E, tanto para os preparatórios do Enem quanto para o suporte ao Ensino Médio, disponibilizamos um acervo vídeo para melhor explicação dos conteúdos abordados.</p>
                         <img class="imagem__destaque__sobre__nos" src="img/Home-estudantes.webp" alt="imagem__estutante">    
                 </section>
-                    
-                    <h2 class="apresentacao__conteudo__titulo">Equipe Projeto Integrador - Talento Cloud</h2> <br>
+                 <h2 class="apresentacao__conteudo__titulo">Equipe Projeto Integrador - Talento Cloud</h2> <br>
                     <div class="apresentacao__curso">
                         <li>Curso: Introdução à Programação com foco em Front-End</li>
                         <li>Instutição de ensino: Proz</li>
