--- a/.vscode/matematica.html
+++ b/.vscode/matematica.html
@@ -1,52 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <style>
-     body
-     {
-       background-image: url(img/fundo-azul.jpg); 
-       background-size: cover;
-     }
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styless.css">
+    <link rel="stylesheet" href="teste.js">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto - Decola ENEM</title>
     <link rel="stylesheet" href="./styles/styles.css">
-    </style>
-  </head>
-  <body>
-    <header class="cabecalho">
-      <div>
-        <nav classe="login-cadastro">
-          <a class="link-login" href="login.html">Login </a>
-          <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
-        </nav>
+    <div>
+        <ul id="button_login_cadastro">
+          <li>
+            <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
+          </li>
+          <li>
+            <a class="link-login" href="login.html">Login </a>
+          </li>
+        </ul>
       </div>
-      <a class="cabecalho__menu__link" href="home.html">
-        <img
-          class="logo-apresentacao"
-          src="img/logo_docola_enem.png"
-          href="home.html"
-          height="300px"
-        />
-      </a>
-      <nav cabecalho__menu>
-        <a class="cabecalho__menu__link" href="sobre_nos.html">Sobre Nós </a>
-        <a class="cabecalho__menu__link" href="redacao.html"> Redação </a>
-        <a class="cabecalho__menu__link" href="linguagens.html"> Linguagens </a>
-        <a class="cabecalho__menu__link" href="ciencias_natureza.html">
-          Ciências da Natureza
-        </a>
-        <a class="cabecalho__menu__link" href="ciencias_humanas.html">
-          Ciências Humanas
-        </a>
-        <a class="cabecalho__menu__link" href="matematica.html"> Matemática </a>
-      </nav>
-    </header>
+    </head>
+    <body>
+      <header>
+        <ul id="button_menu">
+          <div>
+            <a class="cabecalho_menu_link" href="home.html">
+              <img
+                class="logo-apresentacao"
+                src="img/logo_docola_enem.png"
+                href="home.html"
+              />
+            </a>
+          </div>
+          <li>
+            <a href="sobre_nos.html">Sobre Nós </a>
+          </li>
+          <li>
+            <a href="redacao.html"> Redação </a>
+          </li>
+          <li>
+            <a href="linguagens.html"> Linguagens </a>
+          </li>
+          <li>
+            <a href="ciencias_natureza.html"> Ciências da Natureza </a>
+          </li>
+          <li>
+            <a href="ciencias_humanas.html"> Ciências Humanas </a>
+          </li>
+          <li>
+            <a href="matematica.html"> Matemática </a>
+          </li>
+        </ul>
+      </header>
 
     <main>
       <section>
-        <h1 class="apresentacao__conteudo__titulo"><b>Matemática e suas tecnologias</b></h1>
+        <h1 class="apresentacao_conteudo_titulo"><b>Matemática e suas tecnologias</b></h1>
         <p aling=right> Números, equações, fórmulas…quase sempre, o estudo da matemática desperta dúvidas e é temido por alguns alunos, principalmente a partir do ensino fundamental. Mas nem sempre precisa ser desta forma.
           Assim como a língua portuguesa, necessária para a nossa comunicação, a matemática também está presente em nossa vida prática e algumas mudanças podem ajudar nos estudos da disciplina e tornar o aprendizado mais diverti. </p>
           <div>
