finalizando pagina de matematica

--- a/.vscode/matematica.html
+++ b/.vscode/matematica.html
@@ -54,33 +54,46 @@
 
     <main>
       <section>
-        <h1 class="apresentacao_conteudo_titulo"><b>Matemática e suas tecnologias</b></h1>
-        <p aling=right> Números, equações, fórmulas…quase sempre, o estudo da matemática desperta dúvidas e é temido por alguns alunos, principalmente a partir do ensino fundamental. Mas nem sempre precisa ser desta forma.
-          Assim como a língua portuguesa, necessária para a nossa comunicação, a matemática também está presente em nossa vida prática e algumas mudanças podem ajudar nos estudos da disciplina e tornar o aprendizado mais diverti. </p>
-          <div>
-          <img src="img/Quem-inventou-a-Matematica.png" width="300" height="300" alt="left" aling="right">
+        <h1> Matemática e suas tecnologias </h1>
+         <div class="apresentacao_conteudo_matematica">
+            <p>Números, equações, fórmulas…quase sempre, o estudo da matemática desperta dúvidas e é temido por alguns alunos, principalmente a partir do ensino fundamental
+             <br> Mas nem sempre precisa ser desta forma.
+            Assim como a língua portuguesa, necessária para a nossa comunicação, a matemática também está presente em nossa vida prática e algumas mudanças podem ajudar nos estudos da disciplina e tornar o aprendizado mais diverti.</p>
+          <img src="img/Quem-inventou-a-Matematica.png" width="600" height="600" alt="left" aling="right">
           </div>
-          <h2>Em geral, nas provas de Matemática e Suas Tecnologias 
-            caem os seguintes temas:</h2>
-            <p>-Sistema numérico (números naturais, inteiros, irracionais, frações);</p>
-            <p>-Lógica, medidas (comprimento, volume, metro, litro, quilômetro, escala);</p>
-            <p>-Regra de três;</p>
-            <p>-Razão e proporção;</p>
-            <p>-Porcentagem;</p>
-            <p>-Juros simples e compostos;</p>
-            <p>-Funçoes</p>
-            <p>-Aritmética; </p>
-            <p>-Estatística;</p>
-            <p>-Geometria plana e espacial;</p>
-            <p>-Leitura e interpretação de gráficos e tabelas;</p>
-            <p>-Probabilidade;</p>
-            <p> <span style="color:rgb(255, 94, 0)">Medo da matemática?Nunca mais, vem com a gente!</span> </p>
-            <P>Veja abaixo materias que voce deve estudar para o ENEM:</P>
 
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
-            <img src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
-       
+          <ul class="lista_matematica">
+              <p> Em geral, nas provas de Matemática e Suas Tecnologias caem os seguintes temas: </p>
+            <li>Sistema numérico (números naturais, inteiros, irracionais, frações);</li>
+            <li>Lógica, medidas (comprimento, volume, metro, litro, quilômetro, escala);</li>
+            <li>Regra de três;</li>
+            <li>Razão e proporção;</li>
+            <li>Porcentagem;</li>
+            <li>Juros simples e compostos;</li>
+            <li>Funçoes</li>
+            <li>Aritmética; </li>
+            <li>Estatística;</li>
+            <li>Geometria plana e espacial;</li>
+            <li>Leitura e interpretação de gráficos e tabelas;</li>
+            <li>Probabilidade;</li>
+            <p class="sem_medo"> <b>Medo da matemática?Nunca mais, vem com a gente!</b></p>
+          </ul>
+            <h2>Veja abaixo materias que voce deve estudar para o ENEM:</h2>
+            <ul>
+         <div calss="videos_enem_matematica"> 
+            <a class="video 1" href="https://www.youtube.com/watch?v=uaYFrtduFmI&pp=ygUPbWF0ZW1hdGljYSBlbmVt"> 
+            <img class="imagem_youtube"src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+          </a>
+
+          <a class="video 2" href="https://www.youtube.com/watch?v=C9FO0EAbKWA&t=26s&pp=ygU1cHJpbmNpcGFpcyBjb250ZXVkb3MgZGUgbWF0ZW1hdGljYSBlbmVtIG8gcXVlIGVzdHVkYXI%3D">
+            <img class="imagem_youtube"src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+            </a>
+
+            <a class="video 2" href="https://www.youtube.com/watch?v=BUn4sHmT4jg&pp=ygU6cHJpbmNpcGFpcyBjb250ZXVkb3MgZGUgbWF0ZW1hdGljYSBlbmVtIG8gcXVlIGVzdHVkYXIgMjAyNA%3D%3D">
+            <img class="imagem_youtube"src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
+           </a>
+           
+        </div>
           </section>
     </main>
     <footer class="rodape__pagina">
