atualizando a pagina de linguagens

--- a/.vscode/matematica.html
+++ b/.vscode/matematica.html
@@ -51,20 +51,18 @@
           </li>
         </ul>
       </header>
-
-    <main>
-      <section>
-        <h1> Matemática e suas tecnologias </h1>
-         <div class="apresentacao_conteudo_matematica">
-            <p>Números, equações, fórmulas…quase sempre, o estudo da matemática desperta dúvidas e é temido por alguns alunos, principalmente a partir do ensino fundamental
-             <br> Mas nem sempre precisa ser desta forma.
-            Assim como a língua portuguesa, necessária para a nossa comunicação, a matemática também está presente em nossa vida prática e algumas mudanças podem ajudar nos estudos da disciplina e tornar o aprendizado mais diverti.</p>
-          <img src="img/Quem-inventou-a-Matematica.png" width="400" height="450" alt="left" aling="right">
-          </div>
+      <main>
+        <h1><p>Matemática e suas tecnologias</h1>
+         <section class="apresentacao_conteudo_matematica">
+            <p>Números, equações, fórmulas…quase sempre, o estudo da matemática desperta dúvidas e é temido por alguns alunos, principalmente a partir do ensino fundamental.
+             <br> Mas nem sempre precisa ser desta forma, Assim como a língua portuguesa,para a nossa comunicação,
+            a matemática também está presente em nossa vida prática e algumas mudanças podem ajudar nos estudos da disciplina e tornar o aprendizado mais diverti.</p>
+          <img src="img/Quem-inventou-a-Matematica.png" width="500" height="500" alt="center" aling="right">
+         </section>
 
           <ul class="lista_matematica">
-              <p> Em geral, nas provas de Matemática e Suas Tecnologias caem os seguintes temas: </p>
-            <li>Sistema numérico (números naturais, inteiros, irracionais, frações);</li>
+            <p> Em geral, nas provas de Matemática e Suas Tecnologias caem os seguintes temas: </p>
+            <li><p>Sistema numérico (números naturais, inteiros, irracionais, frações);</p></li>
             <li>Lógica, medidas (comprimento, volume, metro, litro, quilômetro, escala);</li>
             <li>Regra de três;</li>
             <li>Razão e proporção;</li>
@@ -78,7 +76,7 @@
             <li>Probabilidade;</li>
             <p class="sem_medo"> <b>Medo da matemática?Nunca mais, vem com a gente!</b></p>
           </ul>
-            <h2>Veja abaixo materias que voce deve estudar para o ENEM:</h2>
+            <p class="veja_videos">Veja abaixo materias que voce deve estudar para o ENEM:</p>
           
          <div class="videos_enem_matematica"> 
             <a class="video 1" href="https://www.youtube.com/watch?v=uaYFrtduFmI&pp=ygUPbWF0ZW1hdGljYSBlbmVt"> 
@@ -93,7 +91,6 @@
             <img class="imagem_youtube"src="C:\Users\Marcilene\Desktop\youtube-card.png"youtube-card" height="100"/>
            </a>
           </div>
-          </section>
     </main>
     <footer class="rodape__pagina">
       <h4>Desenvolvido pela equipe projeto integrador Proz - 2024 ©</h4>
