--- a/linguagens.html
+++ b/linguagens.html
@@ -1,44 +1,60 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="teste.js">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto - Decola ENEM</title>
-  </head>
-  <body>
-    <header class="cabecalho">
-      <div>
-        <nav classe="login-cadastro">
-          <a class="link-login" href="login.html">Login </a>
-          <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
-        </nav>
+    <link rel="stylesheet" href="./styles/styles.css">
+    <div>
+        <ul id="button_login_cadastro">
+          <li>
+            <a class="link-cadastre-se" href="cadastre-se.html">Cadastre-se </a>
+          </li>
+          <li>
+            <a class="link-login" href="login.html">Login </a>
+          </li>
+        </ul>
       </div>
-      <a class="cabecalho_menu_link" href="home.html">
-        <img
-          class="logo-apresentacao"
-          src="img/logo_docola_enem.png"
-          href="home.html"
-          height="300px"
-        />
-      </a>
-      <nav cabecalho__menu>
-        <a class="cabecalho_menu_link" href="sobre_nos.html">Sobre Nós </a>
-        <a class="cabecalho_menu_link" href="redacao.html"> Redação </a>
-        <a class="cabecalho_menu_link" href="linguagens.html"> Linguagens </a>
-        <a class="cabecalho_menu_link" href="ciencias_natureza.html">
-          Ciências da Natureza
-        </a>
-        <a class="cabecalho_menu_link" href="ciencias_humanas.html">
-          Ciências Humanas
-        </a>
-        <a class="cabecalho_menu_link" href="matematica.html"> Matemática </a>
-      </nav>
-    </header>
+    </head>
+    <body>
+      <header>
+        <ul id="button_menu">
+          <div>
+            <a class="cabecalho_menu_link" href="home.html">
+              <img
+                class="logo-apresentacao"
+                src="img/logo_docola_enem.png"
+            href="home.html"
+              />
+            </a>
+            </div>
+          <li>
+            <a href="sobre_nos.html">Sobre Nós </a>
+          </li>
+          <li>
+            <a href="redacao.html"> Redação </a>
+          </li>
+          <li>
+            <a href="linguagens.html"> Linguagens </a>
+          </li>
+          <li>
+            <a href="ciencias_natureza.html"> Ciências da Natureza </a>
+          </li>
+          <li>
+            <a href="ciencias_humanas.html"> Ciências Humanas </a>
+          </li>
+          <li>
+            <a href="matematica.html"> Matemática </a>
+          </li>
+        </ul>
+      </header>
+      <main>
 
-    <main>
       <section>
-        <h1 class="apresentacao_conteudo_titulo"><b>Linguagens, Códigos e suas Tecnologias:</b></h1>
+        <h1 class="apresentacao_linguagens"><b>Linguagens, Códigos e suas Tecnologias:</b></h1>
         <p> <span style="color:rgb(255, 94, 0)"><b>Português, Literatura, Língua Estrangeira, Artes, Educação Física e Tecnologias da Informação e Comunicação</b></span> </p>
 
        <div align="center">
