--- a/.vscode/linguagens.html
+++ b/.vscode/linguagens.html
@@ -54,8 +54,8 @@
 
     <main>
       <section>
-        <h1 class="apresentacao_conteudo_titulo"><b>Linguagens, Códigos e suas Tecnologias:</b></h1>
-        <p> <span style="color:rgb(255, 94, 0)"><b>Português, Literatura, Língua Estrangeira, Artes, Educação Física e Tecnologias da Informação e Comunicação</b></span> </p>
+        <h1 class="apresentacao_conteudo_titulo"><b>Linguagens, Códigos e suas Tecnologias</b></h1>
+        <p class="titulos_de_linguagem"><b>Português, Literatura, Língua Estrangeira, Artes, Educação Física e Tecnologias da Informação e Comunicação</b></p>
 
        <div align="center">
         <p>Linguagens, Códigos e suas Tecnologias é uma prova do Enem que testa conhecimentos 
