--- a/ciencias_humanas.html
+++ b/ciencias_humanas.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styless.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="teste.js">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
