--- a/redacao.html
+++ b/redacao.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styless.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="teste.js">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +32,11 @@
         <main> 
             <section>
                 <h1 class="apresentacao__conteudo__titulo">Redação</h1>
+                <div>
+                    <a class="botao" href="redacao_nota_mil.html"> REDAÇAO NOTA 1000 </a>
+                  </div>
             </section>
+
         </main>
                 <footer class="rodape__pagina">
                     <p> Desenvolvido pela equipe projeto integrador Proz - 2024 ©   </p>
