Implementando o CSS com formatação básica

--- a/ciencias_humanas.html
+++ b/ciencias_humanas.html
@@ -10,55 +10,94 @@
   <body>
     <header>
       <nav>
-        <a href="#"
-          ><img src="img/icone_cie_humanas.png" alt="logo" height="100px"
-        /></a>
-        <br />
-        <a href="">Sobre nós</a>
-        <a href="">Redação</a>
-        <a href="">Linguagens</a>
-        <a href="">Ciências da Natureza</a>
-        <a href="">Ciências Humanas</a>
-        <a href="">Matemática de suas tecnologias</a>
+        <div class="logo-humanas">
+          <a href="#"
+            ><img src="img/icone_cie_humanas.png" alt="logo" height="100px"
+          /></a>
+        </div>
+        <div class="container-lista">
+          <ul class="lista-menu">
+            <li><a href="">Sobre nós</a></li>
+            <li><a href="">Redação</a></li>
+            <li><a href="">Linguagens</a></li>
+            <li><a href="">Ciências da Natureza</a></li>
+            <li><a href="">Ciências Humanas</a></li>
+            <li><a href="">Matemática de suas tecnologias</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
-    <hr />
     <main>
       <section>
-        <h1>Ciências humanas: História, Geografia, Filosofia, e Sociologia</h1>
-        <p>
-          São ciências mais interpretativas e menos exatas, ou seja, não existe
-          fórmula. O que se faz geralmente é, a partir de métodos científicos,
-          observar as características humanas e determinar padrões. Alguns
-          exemplos de disciplinas humanas são Sociologia, História e Geografia.
-        </p>
+        <div class="titulo-principal">
+          <h1>
+            Ciências humanas: <br />História, Geografia, Filosofia, e Sociologia
+          </h1>
+        </div>
+        <div class="texto-secundario">
+          <p>
+            São ciências mais interpretativas e menos exatas, ou seja, não
+            <br />
+            existe fórmula. O que se faz geralmente é, a partir de métodos
+            <br />
+            científicos, observar as características humanas e determinar
+            padrões. <br />
+            Alguns exemplos de disciplinas humanas são Sociologia, História e
+            Geografia.
+          </p>
+        </div>
       </section>
       <section>
-        <div align="center">
+        <div class="titulo-materias">
           <h2>Matérias que você deve estudar para o ENEM</h2>
-          <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
-          <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
-          <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
-          <a href="#"
-            ><img src="./img/youtube-card.png" alt="youtube-card" height="100"
-          /></a>
-          <br />
-          <br />
+        </div>
+        <div class="container-youtube">
+          <ul class="lista-videos">
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  class="youtube-thumb"
+                  src="./img/youtube-card.png"
+                  alt="youtube-card"
+              /></a>
+            </li>
+          </ul>
+        </div>
+        <div class="thumb-secundaria">
           <a href="#"
             ><img src="./img/pre-hist.png" alt="pre-hist" height="200"
           /></a>
         </div>
       </section>
     </main>
-    <hr />
     <footer>
-      <p>Desenvolvido pela equipe projeto integrador Proz</p>
+      <div class="footer">
+        <p>Desenvolvido pela equipe projeto integrador Proz</p>
+      </div>
     </footer>
   </body>
 </html>
