atualizar pagina redaçao nota mil

--- a/redacao_nota_mil.html
+++ b/redacao_nota_mil.html
@@ -54,7 +54,7 @@
 
     <main>
       <h2 class="apresentacao__titulo">Modelo de Redação Nota 1000</h2>
-      <section>
+      <section class="apresentacao__conteudo__redacao">
         <p>
           Alcançar a famosa nota 1.000 na Redação do Enem acaba sendo um grande
           desafio para quem faz a prova.<br />Fazer uma redação nota mil parece
@@ -70,9 +70,6 @@
           >
           com dicas valiosas sobre o assunto.
         </p>
-      </section>
-      <h3>3 modelos de redação nota mil</h3>
-      <section>
         <p>
           Praticar interpretação de texto, manter-se informado para ter o mínimo
           de domínio sobre qualquer possível tema proposto e olhar os temas dos
@@ -81,7 +78,6 @@
           <br />Pensando nisso, separamos alguns temas e modelos de redação nota
           mil, das últimas edições do Enem. Veja só!
         </p>
-
         <p>
           Quais são os critérios de correção da redação do Enem?
 Para garantir uma redação nota mil, o candidato precisa gabaritar as cinco competências utilizadas na correção:</p>
@@ -94,12 +90,8 @@ Para garantir uma redação nota mil, o candidato precisa gabaritar as cinco com
 <li>Competência 5: proposta de Intervenção.</li>
 </or>
 </div>
-
-
-<h4>4 redações nota 1000 do Enem 2022</h4>
-
-        </p>
       </section>
+      <h4>4 redações nota 1000 do Enem 2022</h4>
       <div>
         <a class="modelo-redacao-nota-mil">
           <img
